--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
-  "name": "jlcwebsite",
+  "name": "jlc_web_site",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jlcsolutionscr.github.io/Web-Site",
   "dependencies": {
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
+    "axios": "^0.19.0",
+    "js-file-download": "^0.4.8",
+    "react": "16.10.2",
+    "react-dom": "16.10.2",
     "react-scripts": "3.2.0"
   },
   "scripts": {
