--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "jlc_web_site",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jlcsolutionscr.github.io/Web-Site",
+  "homepage": "https://github.com/jlcsolutionscr/WebSite",
   "dependencies": {
     "axios": "^0.19.0",
+    "gh-pages": "^2.1.1",
     "js-file-download": "^0.4.8",
     "react": "16.10.2",
     "react-dom": "16.10.2",
@@ -13,6 +14,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
