--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jlc_web_site",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/jlcsolutionscr/WebSite",
+  "homepage": "https://jlcsolutionscr.github.com/WebSite",
   "dependencies": {
     "axios": "^0.19.0",
     "gh-pages": "^2.1.1",
