--- a/package.json
+++ b/package.json
@@ -4,21 +4,21 @@
   "private": true,
   "homepage": "https://jlcsolutionscr.github.com/WebSite",
   "dependencies": {
-    "@material-ui/core": "^4.6.0",
-    "@material-ui/pickers": "^3.2.7",
-    "axios": "^0.19.0",
-    "file-saver": "^2.0.2",
+    "@material-ui/core": "4.6.1",
+    "@material-ui/pickers": "3.2.7",
+    "axios": "0.19.0",
+    "file-saver": "2.0.2",
     "gh-pages": "2.1.1",
-    "prop-types": "^15.7.2",
+    "prop-types": "15.7.2",
     "react": "16.11.0",
     "react-dom": "16.11.0",
-    "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
-    "react-router-redux": "^4.0.8",
+    "react-redux": "7.1.3",
+    "react-router-dom": "5.1.2",
+    "react-router-redux": "4.0.8",
     "react-scripts": "3.2.0",
-    "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0",
-    "reselect": "^4.0.0"
+    "redux": "4.0.4",
+    "redux-thunk": "2.3.0",
+    "reselect": "4.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
