--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
-  "name": "JLCSolutions",
+  "name": "jlcsolutionscr.com",
   "version": "1.0.0",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
