--- a/package.json
+++ b/package.json
@@ -3,60 +3,60 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
-    "test": "node scripts/test.js"
+    "start": "NODE_ENV=development node scripts/start.js",
+    "build": "NODE_ENV=production node scripts/build.js",
+    "test": "NODE_ENV=development node scripts/test.js"
   },
   "dependencies": {
-    "@babel/core": "7.6.0",
+    "@babel/core": "7.7.2",
     "@material-ui/core": "4.6.1",
-    "@material-ui/pickers": "3.2.7",
-    "@svgr/webpack": "4.3.2",
-    "@typescript-eslint/eslint-plugin": "^2.2.0",
-    "@typescript-eslint/parser": "^2.2.0",
+    "@material-ui/pickers": "3.2.8",
+    "@svgr/webpack": "4.3.3",
+    "@typescript-eslint/eslint-plugin": "2.8.0",
+    "@typescript-eslint/parser": "2.8.0",
     "axios": "0.19.0",
     "babel-eslint": "10.0.3",
-    "babel-jest": "^24.9.0",
+    "babel-jest": "24.9.0",
     "babel-loader": "8.0.6",
-    "babel-plugin-named-asset-import": "^0.3.4",
-    "babel-preset-react-app": "^9.0.2",
-    "camelcase": "^5.2.0",
+    "babel-plugin-named-asset-import": "0.3.4",
+    "babel-preset-react-app": "9.0.2",
+    "camelcase": "5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "css-loader": "2.1.1",
-    "dotenv": "6.2.0",
+    "css-loader": "3.2.0",
+    "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "eslint": "^6.1.0",
-    "eslint-config-react-app": "^5.0.2",
+    "eslint": "6.6.0",
+    "eslint-config-react-app": "5.0.2",
     "eslint-loader": "3.0.2",
-    "eslint-plugin-flowtype": "3.13.0",
+    "eslint-plugin-flowtype": "4.4.1",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.14.3",
-    "eslint-plugin-react-hooks": "^1.6.1",
-    "file-loader": "3.0.1",
+    "eslint-plugin-react": "7.16.0",
+    "eslint-plugin-react-hooks": "2.3.0",
+    "file-loader": "4.2.0",
     "file-saver": "2.0.2",
-    "fs-extra": "7.0.1",
+    "fs-extra": "8.1.0",
     "gh-pages": "2.1.1",
-    "html-webpack-plugin": "4.0.0-beta.5",
+    "html-webpack-plugin": "^4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
-    "is-wsl": "^1.1.0",
+    "is-wsl": "2.1.1",
     "jest": "24.9.0",
     "jest-environment-jsdom-fourteen": "0.1.0",
     "jest-resolve": "24.9.0",
-    "jest-watch-typeahead": "0.4.0",
+    "jest-watch-typeahead": "0.4.2",
     "mini-css-extract-plugin": "0.8.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
     "pnp-webpack-plugin": "1.5.0",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
-    "postcss-normalize": "7.0.1",
+    "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.1",
     "prop-types": "15.7.2",
-    "react": "16.11.0",
-    "react-app-polyfill": "^1.0.4",
-    "react-dev-utils": "^9.1.0",
-    "react-dom": "16.11.0",
+    "react": "16.12.0",
+    "react-app-polyfill": "1.0.4",
+    "react-dev-utils": "9.1.0",
+    "react-dom": "16.12.0",
     "react-redux": "7.1.3",
     "react-router-dom": "5.1.2",
     "react-router-redux": "4.0.8",
@@ -64,16 +64,16 @@
     "redux-thunk": "2.3.0",
     "reselect": "4.0.0",
     "resolve": "1.12.0",
-    "resolve-url-loader": "3.1.0",
-    "sass-loader": "7.2.0",
+    "resolve-url-loader": "3.1.1",
+    "sass-loader": "8.0.0",
     "semver": "6.3.0",
     "style-loader": "1.0.0",
-    "terser-webpack-plugin": "1.4.1",
-    "ts-pnp": "1.1.4",
-    "url-loader": "2.1.0",
-    "webpack": "4.41.0",
-    "webpack-dev-server": "3.2.1",
-    "webpack-manifest-plugin": "2.1.1",
+    "terser-webpack-plugin": "2.2.1",
+    "ts-pnp": "1.1.5",
+    "url-loader": "2.2.0",
+    "webpack": "4.41.2",
+    "webpack-dev-server": "3.9.0",
+    "webpack-manifest-plugin": "2.2.0",
     "workbox-webpack-plugin": "4.3.1"
   },
   "eslintConfig": {
