--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react-app": "9.0.2",
     "camelcase": "5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "crypto-js": "3.1.9-1",
     "css-loader": "3.2.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
