Enterprise page added.

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-API_SERVICE='https://webservice.jlcsolutionscr.com/production/PuntoventaWCF.svc'
+API_SERVICE='https://webservice.jlcsolutionscr.com/production'
 SECURE_COOKIE=true
 SESSION_EXPIRATION_TIME=5
