--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "test": "NODE_ENV=development node scripts/test.js"
   },
   "dependencies": {
-    "@babel/core": "7.7.2",
-    "@material-ui/core": "4.6.1",
+    "@babel/core": "7.7.4",
+    "@date-io/date-fns": "^1.3.11",
+    "@material-ui/core": "4.7.0",
     "@material-ui/pickers": "3.2.8",
     "@svgr/webpack": "4.3.3",
-    "@typescript-eslint/eslint-plugin": "2.8.0",
-    "@typescript-eslint/parser": "2.8.0",
+    "@typescript-eslint/eslint-plugin": "2.9.0",
+    "@typescript-eslint/parser": "2.9.0",
     "axios": "0.19.0",
     "babel-eslint": "10.0.3",
     "babel-jest": "24.9.0",
@@ -24,25 +25,26 @@
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "crypto-js": "3.1.9-1",
     "css-loader": "3.2.0",
+    "date-fns": "2.8.1",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "eslint": "6.6.0",
+    "eslint": "6.7.1",
     "eslint-config-react-app": "5.0.2",
     "eslint-loader": "3.0.2",
-    "eslint-plugin-flowtype": "4.4.1",
+    "eslint-plugin-flowtype": "4.5.2",
     "eslint-plugin-import": "2.18.2",
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.16.0",
     "eslint-plugin-react-hooks": "2.3.0",
-    "file-loader": "4.2.0",
+    "file-loader": "5.0.2",
     "file-saver": "2.0.2",
     "fs-extra": "8.1.0",
     "gh-pages": "2.1.1",
-    "html-webpack-plugin": "^4.0.0-beta.11",
+    "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "2.1.1",
     "jest": "24.9.0",
-    "jest-environment-jsdom-fourteen": "0.1.0",
+    "jest-environment-jsdom-fourteen": "1.0.0",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
     "mini-css-extract-plugin": "0.8.0",
@@ -64,14 +66,14 @@
     "redux": "4.0.4",
     "redux-thunk": "2.3.0",
     "reselect": "4.0.0",
-    "resolve": "1.12.0",
+    "resolve": "1.13.1",
     "resolve-url-loader": "3.1.1",
     "sass-loader": "8.0.0",
     "semver": "6.3.0",
-    "style-loader": "1.0.0",
+    "style-loader": "1.0.1",
     "terser-webpack-plugin": "2.2.1",
     "ts-pnp": "1.1.5",
-    "url-loader": "2.2.0",
+    "url-loader": "3.0.0",
     "webpack": "4.41.2",
     "webpack-dev-server": "3.9.0",
     "webpack-manifest-plugin": "2.2.0",
