Visitor tracking portal started.

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-API_SERVICE='https://webservice.jlcsolutionscr.com/development'
+FE_SERVICE_URL='https://development.jlcsolutionscr.com/facturacion'
+VT_SERVICE_URL='http://localhost:5000'
 SECURE_COOKIE=false
 SESSION_EXPIRATION_TIME=5
