--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
-API_SERVICE='https://webservice.jlcsolutionscr.com/production'
+FE_SERVICE_URL='https://webservice.jlcsolutionscr.com/production'
+VT_SERVICE_URL='https://webservice.jlcsolutionscr.com/visitortracking'
 SECURE_COOKIE=true
 SESSION_EXPIRATION_TIME=5
