--- a/package.json
+++ b/package.json
@@ -8,77 +8,77 @@
     "test": "NODE_ENV=development node scripts/test.js"
   },
   "dependencies": {
-    "@babel/core": "7.7.4",
-    "@date-io/date-fns": "^1.3.11",
-    "@material-ui/core": "4.7.0",
-    "@material-ui/pickers": "3.2.8",
+    "@babel/core": "7.8.4",
+    "@date-io/date-fns": "^1.3.13",
+    "@material-ui/core": "4.9.3",
+    "@material-ui/pickers": "3.2.10",
     "@svgr/webpack": "4.3.3",
-    "@typescript-eslint/eslint-plugin": "2.9.0",
-    "@typescript-eslint/parser": "2.9.0",
-    "axios": "0.19.0",
+    "@typescript-eslint/eslint-plugin": "2.20.0",
+    "@typescript-eslint/parser": "2.20.0",
+    "axios": "0.19.2",
     "babel-eslint": "10.0.3",
-    "babel-jest": "24.9.0",
+    "babel-jest": "25.1.0",
     "babel-loader": "8.0.6",
-    "babel-plugin-named-asset-import": "0.3.4",
-    "babel-preset-react-app": "9.0.2",
+    "babel-plugin-named-asset-import": "0.3.6",
+    "babel-preset-react-app": "9.1.1",
     "camelcase": "5.3.1",
-    "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "crypto-js": "3.1.9-1",
-    "css-loader": "3.2.0",
-    "date-fns": "2.8.1",
+    "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "crypto-js": "4.0.0",
+    "css-loader": "3.4.2",
+    "date-fns": "2.9.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
-    "eslint": "6.7.1",
-    "eslint-config-react-app": "5.0.2",
-    "eslint-loader": "3.0.2",
-    "eslint-plugin-flowtype": "4.5.2",
-    "eslint-plugin-import": "2.18.2",
+    "eslint": "6.8.0",
+    "eslint-config-react-app": "5.2.0",
+    "eslint-loader": "3.0.3",
+    "eslint-plugin-flowtype": "4.6.0",
+    "eslint-plugin-import": "2.20.1",
     "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.16.0",
-    "eslint-plugin-react-hooks": "2.3.0",
-    "file-loader": "5.0.2",
+    "eslint-plugin-react": "7.18.3",
+    "eslint-plugin-react-hooks": "2.4.0",
+    "file-loader": "5.1.0",
     "file-saver": "2.0.2",
     "fs-extra": "8.1.0",
-    "gh-pages": "2.1.1",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "2.1.1",
-    "jest": "24.9.0",
-    "jest-environment-jsdom-fourteen": "1.0.0",
-    "jest-resolve": "24.9.0",
+    "jest": "25.1.0",
+    "jest-environment-jsdom-fourteen": "1.0.1",
+    "jest-resolve": "25.1.0",
     "jest-watch-typeahead": "0.4.2",
-    "mini-css-extract-plugin": "0.8.0",
+    "mini-css-extract-plugin": "0.9.0",
     "optimize-css-assets-webpack-plugin": "5.0.3",
-    "pnp-webpack-plugin": "1.5.0",
-    "postcss-flexbugs-fixes": "4.1.0",
+    "pnp-webpack-plugin": "1.6.4",
+    "postcss-flexbugs-fixes": "4.2.0",
     "postcss-loader": "3.0.0",
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
-    "postcss-safe-parser": "4.0.1",
+    "postcss-safe-parser": "4.0.2",
     "prop-types": "15.7.2",
     "react": "16.12.0",
-    "react-app-polyfill": "1.0.4",
-    "react-dev-utils": "9.1.0",
+    "react-app-polyfill": "1.0.6",
+    "react-dev-utils": "10.1.0",
     "react-dom": "16.12.0",
-    "react-redux": "7.1.3",
+    "react-qrcode-logo": "2.2.1",
+    "react-redux": "7.2.0",
     "react-router-dom": "5.1.2",
     "react-router-redux": "4.0.8",
-    "redux": "4.0.4",
+    "redux": "4.0.5",
     "redux-thunk": "2.3.0",
     "reselect": "4.0.0",
-    "resolve": "1.13.1",
+    "resolve": "1.15.1",
     "resolve-url-loader": "3.1.1",
-    "sass-loader": "8.0.0",
-    "semver": "6.3.0",
-    "style-loader": "1.0.1",
-    "terser-webpack-plugin": "2.2.1",
-    "ts-pnp": "1.1.5",
+    "sass-loader": "8.0.2",
+    "semver": "7.1.3",
+    "style-loader": "1.1.3",
+    "terser-webpack-plugin": "2.3.5",
+    "ts-pnp": "1.1.6",
     "url-loader": "3.0.0",
-    "webpack": "4.41.2",
-    "webpack-dev-server": "3.9.0",
+    "webpack": "4.41.6",
+    "webpack-dev-server": "3.10.3",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1",
-    "xlsx": "0.15.3"
+    "workbox-webpack-plugin": "5.0.0",
+    "xlsx": "0.15.5"
   },
   "eslintConfig": {
     "extends": "react-app"
