--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "webpack": "4.41.6",
     "webpack-dev-server": "3.10.3",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "5.0.0",
+    "workbox-webpack-plugin": "^4.3.1",
     "xlsx": "0.15.5"
   },
   "eslintConfig": {
