--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "dependencies": {
     "@babel/core": "7.8.4",
-    "@date-io/date-fns": "^1.3.13",
+    "@date-io/date-fns": "1.3.13",
     "@material-ui/core": "4.9.3",
     "@material-ui/pickers": "3.2.10",
     "@svgr/webpack": "4.3.3",
@@ -77,7 +77,7 @@
     "webpack": "4.41.6",
     "webpack-dev-server": "3.10.3",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "^4.3.1",
+    "workbox-webpack-plugin": "4.3.1",
     "xlsx": "0.15.5"
   },
   "eslintConfig": {
