--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "NODE_ENV=development node scripts/start.js",
+    "build-dev": "NODE_ENV=development node scripts/build.js",
     "build": "NODE_ENV=production node scripts/build.js",
     "test": "NODE_ENV=development node scripts/test.js"
   },
