--- a/package.json
+++ b/package.json
@@ -56,11 +56,11 @@
     "postcss-preset-env": "6.7.0",
     "postcss-safe-parser": "4.0.2",
     "prop-types": "15.7.2",
+    "qrcode": "1.4.4",
     "react": "16.12.0",
     "react-app-polyfill": "1.0.6",
     "react-dev-utils": "10.1.0",
     "react-dom": "16.12.0",
-    "react-qrcode-logo": "2.2.1",
     "react-redux": "7.2.0",
     "react-router-dom": "5.1.2",
     "react-router-redux": "4.0.8",
