Web service endpoints updated.

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-FE_SERVICE_URL='https://development.jlcsolutionscr.com/facturacion'
-VT_SERVICE_URL='https://development.jlcsolutionscr.com/visitortracking'
+FE_SERVICE_URL='http://dev-webservice.jlcsolutionscr.com/facturacion'
+VT_SERVICE_URL='http://dev-webservice.jlcsolutionscr.com/visitortracking'
 SECURE_COOKIE=false
 SESSION_EXPIRATION_TIME=5
