--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-FE_SERVICE_URL='https://jlcsolutionscr.com/facturacion'
-VT_SERVICE_URL='https://jlcsolutionscr.com/visitortracking'
+FE_SERVICE_URL='https://webservices.jlcsolutionscr.com/facturacion'
+VT_SERVICE_URL='https://webservices.jlcsolutionscr.com/visitortracking'
 SECURE_COOKIE=true
 SESSION_EXPIRATION_TIME=5
