Removing visitor tracking routing

--- a/.env
+++ b/.env
@@ -1,4 +1,3 @@
-FE_SERVICE_URL='https://dev-webservices.jlcsolutionscr.com/facturacion'
-VT_SERVICE_URL='https://dev-webservices.jlcsolutionscr.com/visitortracking'
+REACT_APP_SERVER_URL='https://dev-webservices.jlcsolutionscr.com/facturacion'
 SECURE_COOKIE=false
 SESSION_EXPIRATION_TIME=5
