--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jlcsolutionscr.com",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
     "start": "NODE_ENV=development node scripts/start.js",
@@ -9,80 +9,87 @@
     "test": "NODE_ENV=development node scripts/test.js"
   },
   "dependencies": {
-    "@babel/core": "7.8.4",
-    "@date-io/date-fns": "1.3.13",
-    "@material-ui/core": "4.9.3",
-    "@material-ui/pickers": "3.2.10",
-    "@svgr/webpack": "4.3.3",
-    "@typescript-eslint/eslint-plugin": "2.20.0",
-    "@typescript-eslint/parser": "2.20.0",
-    "axios": "0.19.2",
-    "babel-eslint": "10.0.3",
-    "babel-jest": "25.1.0",
-    "babel-loader": "8.0.6",
-    "babel-plugin-named-asset-import": "0.3.6",
-    "babel-preset-react-app": "9.1.1",
-    "camelcase": "5.3.1",
+    "@babel/core": "7.12.3",
+    "@date-io/date-fns": "^2.11.0",
+    "@material-ui/core": "^4.12.2",
+    "@material-ui/pickers": "^3.3.10",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
+    "@svgr/webpack": "5.5.0",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@typescript-eslint/eslint-plugin": "^4.5.0",
+    "@typescript-eslint/parser": "^4.5.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.6.0",
+    "babel-loader": "8.1.0",
+    "babel-plugin-named-asset-import": "^0.3.7",
+    "babel-preset-react-app": "^10.0.0",
+    "bfj": "^7.0.2",
+    "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
-    "crypto-js": "4.0.0",
-    "css-loader": "3.4.2",
-    "date-fns": "2.9.0",
-    "dotenv": "8.2.0",
+    "crypto-js": "^4.1.1",
+    "css-loader": "4.3.0",
+    "date-fns": "^2.23.0",
+    "dotenv": "^10.0.0",
     "dotenv-expand": "5.1.0",
-    "eslint": "6.8.0",
-    "eslint-config-react-app": "5.2.0",
-    "eslint-loader": "3.0.3",
-    "eslint-plugin-flowtype": "4.6.0",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-jsx-a11y": "6.2.3",
-    "eslint-plugin-react": "7.18.3",
-    "eslint-plugin-react-hooks": "2.4.0",
-    "file-loader": "5.1.0",
-    "file-saver": "2.0.2",
-    "fs-extra": "8.1.0",
-    "html-webpack-plugin": "4.0.0-beta.11",
+    "eslint": "^7.11.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^5.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-plugin-testing-library": "^3.9.2",
+    "eslint-webpack-plugin": "^2.5.2",
+    "file-loader": "6.1.1",
+    "file-saver": "^2.0.5",
+    "fs-extra": "^9.0.1",
+    "html-webpack-plugin": "4.5.0",
     "identity-obj-proxy": "3.0.0",
-    "is-wsl": "2.1.1",
-    "jest": "25.1.0",
-    "jest-environment-jsdom-fourteen": "1.0.1",
-    "jest-resolve": "25.1.0",
-    "jest-watch-typeahead": "0.4.2",
-    "mini-css-extract-plugin": "0.9.0",
-    "optimize-css-assets-webpack-plugin": "5.0.3",
+    "jest": "26.6.0",
+    "jest-circus": "26.6.0",
+    "jest-resolve": "26.6.0",
+    "jest-watch-typeahead": "0.6.1",
+    "mini-css-extract-plugin": "0.11.3",
+    "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
-    "postcss-flexbugs-fixes": "4.2.0",
+    "postcss-flexbugs-fixes": "4.2.1",
     "postcss-loader": "3.0.0",
     "postcss-normalize": "8.0.1",
     "postcss-preset-env": "6.7.0",
-    "postcss-safe-parser": "4.0.2",
-    "prop-types": "15.7.2",
-    "qrcode": "1.4.4",
-    "react": "16.12.0",
-    "react-app-polyfill": "1.0.6",
-    "react-dev-utils": "10.1.0",
-    "react-dom": "16.12.0",
-    "react-redux": "7.2.0",
-    "react-router-dom": "5.1.2",
-    "react-router-redux": "4.0.8",
-    "redux": "4.0.5",
-    "redux-thunk": "2.3.0",
-    "reselect": "4.0.0",
-    "resolve": "1.15.1",
-    "resolve-url-loader": "3.1.1",
-    "sass-loader": "8.0.2",
-    "semver": "7.1.3",
-    "style-loader": "1.1.3",
-    "terser-webpack-plugin": "2.3.5",
-    "ts-pnp": "1.1.6",
-    "url-loader": "3.0.0",
-    "webpack": "4.41.6",
-    "webpack-dev-server": "3.10.3",
+    "postcss-safe-parser": "5.0.2",
+    "prompts": "2.4.0",
+    "qrcode": "^1.4.4",
+    "react": "^17.0.2",
+    "react-app-polyfill": "^2.0.0",
+    "react-dev-utils": "^11.0.3",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
+    "react-refresh": "^0.8.3",
+    "react-router-dom": "^5.2.0",
+    "redux-thunk": "^2.3.0",
+    "resolve": "1.18.1",
+    "resolve-url-loader": "^3.1.2",
+    "sass-loader": "^10.0.5",
+    "semver": "7.3.2",
+    "style-loader": "1.3.0",
+    "terser-webpack-plugin": "4.2.3",
+    "ts-pnp": "1.2.0",
+    "url-loader": "4.1.1",
+    "web-vitals": "^1.0.1",
+    "webpack": "4.44.2",
+    "webpack-dev-server": "3.11.1",
     "webpack-manifest-plugin": "2.2.0",
-    "workbox-webpack-plugin": "4.3.1",
-    "xlsx": "0.15.5"
+    "workbox-webpack-plugin": "5.1.4",
+    "xlsx": "^0.17.0"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
   },
   "browserslist": {
     "production": [
@@ -107,19 +114,22 @@
     "setupFiles": [
       "react-app-polyfill/jsdom"
     ],
-    "setupFilesAfterEnv": [],
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.js"
+    ],
     "testMatch": [
       "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
       "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
     ],
-    "testEnvironment": "jest-environment-jsdom-fourteen",
+    "testEnvironment": "jsdom",
+    "testRunner": "/Users/jason/Development/JLC/web-site-2/node_modules/jest-circus/runner.js",
     "transform": {
-      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
       "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+      "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
     },
     "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
       "^.+\\.module\\.(css|sass|scss)$"
     ],
     "modulePaths": [],
@@ -142,7 +152,8 @@
     "watchPlugins": [
       "jest-watch-typeahead/filename",
       "jest-watch-typeahead/testname"
-    ]
+    ],
+    "resetMocks": true
   },
   "babel": {
     "presets": [
