--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,3 @@
-FE_SERVICE_URL='https://webservices.jlcsolutionscr.com/facturacion'
-VT_SERVICE_URL='https://webservices.jlcsolutionscr.com/visitortracking'
+REACT_APP_SERVER_URL='https://webservices.jlcsolutionscr.com/facturacion'
 SECURE_COOKIE=true
 SESSION_EXPIRATION_TIME=5
