--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "2.0.0",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=development node scripts/start.js",
-    "build-dev": "NODE_ENV=development node scripts/build.js",
-    "build-prod": "NODE_ENV=production node scripts/build.js",
-    "test": "NODE_ENV=development node scripts/test.js"
+    "start": "node scripts/start.js",
+    "build-dev": "node scripts/build.js",
+    "build-prod": "REACT_APP_ENV=production node scripts/build.js",
+    "test": "node scripts/test.js"
   },
   "dependencies": {
     "@babel/core": "7.12.3",
