--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "test": "node scripts/test.js"
   },
   "dependencies": {
-    "@date-io/date-fns": "^2.11.0",
     "@material-ui/core": "^4.12.2",
     "@material-ui/pickers": "^3.3.10",
+    "axios": "^0.21.1",
     "crypto-js": "^4.1.1",
     "date-fns": "^2.23.0",
     "file-loader": "6.1.1",
@@ -104,6 +104,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.12.3",
+    "@date-io/date-fns": "1.3.13",
     "@pmmmwh/react-refresh-webpack-plugin": "0.4.3",
     "@svgr/webpack": "5.5.0",
     "@testing-library/jest-dom": "^5.11.4",
