--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-refresh": "^0.8.3",
     "react-router-dom": "^5.2.0",
     "redux-thunk": "^2.3.0",
+    "ua-parser-js": "^0.7.28",
     "xlsx": "^0.17.0"
   },
   "eslintConfig": {
