--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.4",
     "react-refresh": "^0.8.3",
+    "react-xml-parser": "^1.1.8",
     "redux-thunk": "^2.3.0",
     "ua-parser-js": "^0.7.28",
     "xlsx": "^0.17.0"
