--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-ui/pickers": "3.3.10",
     "crypto-js": "4.1.1",
     "date-fns": "2.23.0",
+    "escpos-template": "^1.1.0",
     "file-saver": "2.0.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
