Added web services new version to prod

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-REACT_APP_SERVER_URL='https://webservices.jlcsolutionscr.com/facturacion'
+REACT_APP_SERVER_URL='https://webservices.jlcsolutionscr.com/facturacion-v2'
 SECURE_COOKIE=true
 SESSION_EXPIRATION_TIME=5
