Setting env file based on REACT_ENV variable

--- a/public/web.config
+++ b/public/web.config
@@ -14,5 +14,8 @@
             </rules>
         </rewrite>
         <httpErrors errorMode="DetailedLocalOnly" existingResponse="Auto" />
+        <staticContent>
+            <mimeMap fileExtension=".webp" mimeType="image/webp" />
+        </staticContent>
     </system.webServer>
 </configuration>
