--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-xml-parser": "1.1.8",
     "redux-thunk": "2.3.0",
     "ua-parser-js": "0.7.28",
+    "whatwg-fetch": "^3.6.2",
     "xlsx": "0.17.0"
   },
   "eslintConfig": {
