--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
     "@material-ui/pickers": "3.3.10",
     "crypto-js": "4.1.1",
     "date-fns": "2.23.0",
+    "escpos-buffer": "^4.1.0",
     "escpos-template": "^1.1.0",
     "file-saver": "2.0.5",
     "install": "^0.13.0",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "7.2.4",
     "react-refresh": "0.8.3",
     "react-xml-parser": "1.1.8",
+    "redux": "^5.0.0",
     "redux-thunk": "2.3.0",
     "ua-parser-js": "0.7.28",
     "whatwg-fetch": "^3.6.2",
