--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.4",
     "redux": "^4.2.1",
+    "tss-react": "^4.9.3",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
