--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@mui/material": "^5.14.19",
     "@reduxjs/toolkit": "^1.9.7",
     "crypto-js": "^4.2.0",
-    "escpos-buffer": "^4.1.0",
+    "escpos-buffer-web": "^1.7.2",
     "fast-xml-parser": "^4.3.2",
     "file-saver": "^2.0.5",
     "path": "^0.12.7",
