--- a/package.json
+++ b/package.json
@@ -11,41 +11,41 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.19",
-    "@reduxjs/toolkit": "^1.9.7",
-    "crypto-js": "^4.2.0",
-    "escpos-buffer-web": "^1.7.2",
-    "fast-xml-parser": "^4.3.2",
-    "file-saver": "^2.0.5",
-    "path": "^0.12.7",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^9.0.4",
-    "redux": "^4.2.1",
-    "tss-react": "^4.9.3",
-    "xlsx": "^0.18.5"
+    "@emotion/react": "11.11.1",
+    "@emotion/styled": "11.11.0",
+    "@mui/material": "5.14.19",
+    "@reduxjs/toolkit": "1.9.7",
+    "crypto-js": "4.2.0",
+    "escpos-buffer-web": "1.7.2",
+    "fast-xml-parser": "4.3.2",
+    "file-saver": "2.0.5",
+    "path": "0.12.7",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-redux": "9.0.4",
+    "redux": "4.2.1",
+    "tss-react": "4.9.3",
+    "xlsx": "0.18.5"
   },
   "devDependencies": {
-    "@types/crypto-js": "^4.2.1",
-    "@types/file-saver": "^2.0.7",
-    "@types/node": "^20.10.1",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@types/w3c-web-usb": "^1.0.10",
-    "@types/xml": "^1.0.11",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "@vitejs/plugin-react": "^4.2.0",
-    "eslint": "^8.53.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-compat": "^4.2.0",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.4",
-    "prettier": "^3.1.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.0"
+    "@types/crypto-js": "4.2.1",
+    "@types/file-saver": "2.0.7",
+    "@types/node": "20.10.1",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
+    "@types/w3c-web-usb": "1.0.10",
+    "@types/xml": "1.0.11",
+    "@typescript-eslint/eslint-plugin": "6.10.0",
+    "@typescript-eslint/parser": "6.10.0",
+    "@vitejs/plugin-react": "4.2.0",
+    "eslint": "8.53.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-compat": "4.2.0",
+    "eslint-plugin-react": "7.33.2",
+    "eslint-plugin-react-hooks": "4.6.0",
+    "eslint-plugin-react-refresh": "0.4.4",
+    "prettier": "3.1.0",
+    "typescript": "5.2.2",
+    "vite": "5.0.0"
   }
 }
