--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
     "@mui/material": "5.14.19",
+    "@mui/x-date-pickers": "^6.18.7",
     "@reduxjs/toolkit": "1.9.7",
     "crypto-js": "4.1.1",
+    "date-fns": "2.13.0",
     "escpos-buffer-web": "1.7.2",
     "fast-xml-parser": "4.3.2",
     "file-saver": "2.0.5",
