--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "prettier": "prettier --write .",
     "dev": "vite",
     "build": "tsc && vite build",
     "build-dev": "tsc && vite build --mode development",
@@ -30,6 +31,7 @@
     "xlsx": "0.18.5"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@types/crypto-js": "4.2.1",
     "@types/file-saver": "2.0.7",
     "@types/node": "20.10.1",
@@ -46,7 +48,7 @@
     "eslint-plugin-react": "7.33.2",
     "eslint-plugin-react-hooks": "4.6.0",
     "eslint-plugin-react-refresh": "0.4.4",
-    "prettier": "3.1.0",
+    "prettier": "2.8.8",
     "typescript": "5.2.2",
     "vite": "5.0.0"
   }
