--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "9.0.4",
     "redux": "4.2.1",
     "tss-react": "4.9.3",
+    "ua-parser-js": "^1.0.37",
     "xlsx": "0.18.5"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "@types/node": "20.10.1",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
+    "@types/ua-parser-js": "^0.7.39",
     "@types/w3c-web-usb": "1.0.10",
     "@types/xml": "1.0.11",
     "@typescript-eslint/eslint-plugin": "6.10.0",
