--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_SERVER_URL='https://dev-webservices.jlcsolutionscr.com/facturacion-v2'
+REACT_APP_SERVER_URL='https://dev-webservice.jlcsolutionscr.com'
 SECURE_COOKIE=false
 SESSION_EXPIRATION_TIME=5
