--- a/public/web.config
+++ b/public/web.config
@@ -1,9 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration>
-    <system.webServer>
-        <httpErrors errorMode="DetailedLocalOnly" existingResponse="Auto" />
-        <staticContent>
-            <mimeMap fileExtension=".webp" mimeType="image/webp" />
-        </staticContent>
-    </system.webServer>
+  <system.webServer>
+    <httpErrors errorMode="DetailedLocalOnly" existingResponse="Auto" />
+    <staticContent>
+      <mimeMap fileExtension=".webp" mimeType="image/webp" />
+    </staticContent>
+    <rewrite>
+      <rules>
+        <rule name="httpTohttps" stopProcessing="true">
+          <match url="^(.*)$" />
+          <conditions>
+            <add input="{HTTPS}" pattern="off" ignoreCase="true" />
+          </conditions>
+          <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" redirectType="Permanent" />
+        </rule>
+      </rules>
+    </rewrite>
+  </system.webServer>
 </configuration>
