Fixed env server variables

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,3 @@
-REACT_APP_SERVER_URL='https://webservice.jlcsolutionscr.com'
+VITE_APP_SERVER_URL=https://webservice.jlcsolutionscr.com
 SECURE_COOKIE=true
 SESSION_EXPIRATION_TIME=5
