Fixed issue on product details price calculation, added Hacienda query to local

--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 VITE_APP_SERVER_URL=https://webservice.jlcsolutionscr.com
+VITE_HACIENDA_SERVER_URL=https://api.hacienda.go.cr/fe/ae
 SECURE_COOKIE=true
 SESSION_EXPIRATION_TIME=5
