--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 VITE_APP_SERVER_URL=https://dev-webservice.jlcsolutionscr.com
+VITE_HACIENDA_SERVER_URL=https://api.hacienda.go.cr/fe/ae
 SECURE_COOKIE=false
 SESSION_EXPIRATION_TIME=5
