--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fact-vite-web",
+  "name": "jlc-facturacion-web",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -22,6 +22,7 @@
     "escpos-buffer-web": "1.7.2",
     "fast-xml-parser": "4.3.2",
     "file-saver": "2.0.5",
+    "jlc-component-library": "1.0.12",
     "path": "0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
