--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@emotion/react": "11.11.1",
     "@emotion/styled": "11.11.0",
     "@mui/material": "5.14.19",
-    "@mui/x-date-pickers": "^6.18.7",
+    "@mui/x-date-pickers": "6.18.7",
     "@reduxjs/toolkit": "1.9.7",
     "crypto-js": "4.1.1",
     "date-fns": "2.13.0",
@@ -28,17 +28,17 @@
     "react-redux": "9.0.4",
     "redux": "4.2.1",
     "tss-react": "4.9.3",
-    "ua-parser-js": "^1.0.37",
+    "ua-parser-js": "1.0.37",
     "xlsx": "0.18.5"
   },
   "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@ianvs/prettier-plugin-sort-imports": "4.1.1",
     "@types/crypto-js": "4.2.1",
     "@types/file-saver": "2.0.7",
     "@types/node": "20.10.1",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
-    "@types/ua-parser-js": "^0.7.39",
+    "@types/ua-parser-js": "0.7.39",
     "@types/w3c-web-usb": "1.0.10",
     "@types/xml": "1.0.11",
     "@typescript-eslint/eslint-plugin": "6.10.0",
