Upgraded dev dependencies to newer version

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
+      "my-types/*": ["./dist/types/*"],
       "assets/*": ["src/assets/*"],
       "components/*": ["src/components/*"],
       "pages/*": ["src/pages/*"],
