--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "build-dev": "tsc && vite build --mode development",
-    "lint": "eslint . --ext ts,tsx",
+    "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -22,7 +22,7 @@
     "escpos-buffer-web": "1.7.2",
     "fast-xml-parser": "4.3.2",
     "file-saver": "2.0.5",
-    "jlc-component-library": "1.0.17",
+    "jlc-component-library": "1.0.20",
     "path": "0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -33,26 +33,29 @@
     "xlsx": "0.18.5"
   },
   "devDependencies": {
+    "@eslint/compat": "1.2.5",
+    "@eslint/eslintrc": "3.2.0",
+    "@eslint/js": "9.18.0",
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
-    "@types/crypto-js": "4.2.1",
-    "@types/file-saver": "2.0.7",
+    "@types/crypto-js": "^4.2.2",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "20.10.1",
     "@types/react": "18.2.37",
     "@types/react-dom": "18.2.15",
-    "@types/ua-parser-js": "0.7.39",
-    "@types/w3c-web-usb": "1.0.10",
-    "@types/xml": "1.0.11",
-    "@typescript-eslint/eslint-plugin": "6.10.0",
-    "@typescript-eslint/parser": "6.10.0",
-    "@vitejs/plugin-react": "4.2.0",
-    "eslint": "8.53.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-compat": "4.2.0",
-    "eslint-plugin-react": "7.33.2",
-    "eslint-plugin-react-hooks": "4.6.0",
-    "eslint-plugin-react-refresh": "0.4.4",
-    "prettier": "2.8.8",
-    "typescript": "5.2.2",
-    "vite": "5.0.0"
+    "@types/ua-parser-js": "^0.7.39",
+    "@types/w3c-web-usb": "^1.0.13",
+    "@typescript-eslint/eslint-plugin": "^8.46.0",
+    "@typescript-eslint/parser": "8.20.0",
+    "@vitejs/plugin-react": "4.3.4",
+    "eslint": "9.18.0",
+    "eslint-config-prettier": "10.0.1",
+    "eslint-plugin-react": "7.37.4",
+    "eslint-plugin-react-hooks": "5.0.0",
+    "eslint-plugin-react-refresh": "0.4.18",
+    "globals": "15.14.0",
+    "prettier": "3.4.2",
+    "sass": "1.83.4",
+    "typescript": "5.8.3",
+    "vite": "6.3.5"
   }
 }
